objects/Vendor__c.object
<CustomObject>
    <description>Organizations that provide products or services to our members, such as benefits consultants, TPAs, or Disease Management service providers.</description>
    <fields>
        <fullName>Vendor_Care_Management_Evaluation_Flag__c</fullName>
        <label>Vendor Care Management Evaluation Flag</label>
        <picklist>
            <picklistValues>
                <fullName>No Care Management Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Care Management Evaluation in 2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Care Management Evaluation in 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Care Management Evaluation in 2011</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Contacts__c</fullName>
        <label>Vendor Contacts</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Data_Restrictions__c</fullName>
        <label>Vendor Data Restrictions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Global_NDA__c</fullName>
        <label>Vendor Global NDA</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - True Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Sign-Off Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Idiosyncrasies__c</fullName>
        <label>Vendor Idiosyncrasies</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Legal_Constraints__c</fullName>
        <label>Vendor Legal Constraints</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Notes__c</fullName>
        <label>Vendor Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_Relationship_Count_Medical_TPA__c</fullName>
        <inlineHelpText>Count of all related Vendor Relationships of type &quot;Medical TPA&quot; associated with this Vendor</inlineHelpText>
        <label>Vendor Relationship Count: Medical TPA</label>
        <summaryFilterItems>
            <field>Vendor_Relationship__c.Vendor_Relationship_Type__c</field>
            <operation>equals</operation>
            <value>Medical Claims</value>
        </summaryFilterItems>
        <summaryForeignKey>Vendor_Relationship__c.Vendor__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vendor_Relationship_Count_PBM__c</fullName>
        <inlineHelpText>Count of Vendor Relationships of type &quot;Pharmacy Claims&quot; related to this Vendor</inlineHelpText>
        <label>Vendor Relationship Count: PBM</label>
        <summaryFilterItems>
            <field>Vendor_Relationship__c.Vendor_Relationship_Type__c</field>
            <operation>equals</operation>
            <value>Pharmacy Claims</value>
        </summaryFilterItems>
        <summaryForeignKey>Vendor_Relationship__c.Vendor__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vendor_Relationship_Count_Total__c</fullName>
        <inlineHelpText>Count of all Vendor Relationships associated with this Vendor. This may over-count the total number of customers or contracts this vendor has - for example, a customer sending Medical Claims, Pharmacy Claims, and Eligibility would be 3 total relationships</inlineHelpText>
        <label>Vendor Relationship Count: Total</label>
        <summaryForeignKey>Vendor_Relationship__c.Vendor__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vendor_Repricing_Rules__c</fullName>
        <label>Vendor Repricing Rules</label>
        <picklist>
            <picklistValues>
                <fullName>Never Allowed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Varies By Individual NDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Always Allowed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_URL__c</fullName>
        <label>Vendor URL</label>
        <type>Url</type>
    </fields>
    <label>Vendor</label>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>